# avr-pi

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json  dump.txt
include/: avr.h
scripts/: dump.sh  valgrind.sh
sketches/: Makefile
sketches/hello_world/: hello_world.ino
src/: ATmega328P.c  ATmega328P.h  AVR.h  avr.c  avr.h  avr_defs.h  common.h  defs.h  main.c  mcu.c  mcu.h  pi.c  test.c
test/: CMakeLists.txt  test.c
test/sketches/: build.sh
test/sketches/blink/: blink.ino  blink.ino.hex
test/sketches/blink_without_delay/: blink_without_delay.ino  blink_without_delay.ino.hex
test/sketches/hello_world/: hello_world.ino  hello_world.ino.hex
test/sketches/usart/: usart.ino  usart.ino.hex
test/sketches/usart-rx/: usart-rx.ino  usart-rx.ino.hex
test/sketches/usart-tx/: usart-tx.ino  usart-tx.ino.hex
tests/sketches/: Makefile
